--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="css.css"/>
 </head>
 <body>
-<div class="header">JAPARI Animation</div>
+<div class="header">
+    <div class="headCon">
+        JAPARI Animation
+    </div>
+</div>
 <div class="mainCon">
     <div class="left">
         <ul>
-            <li>文本文本文本文本文本文本文本文本文本</li>
+            <li>Wellcome to JAPRIPARK</li>
             <li>文本文本文本文本文本</li>
             <li>文本文本文本文本文本文本文本文本文本文本文本文本文本</li>
         </ul>
